# emrakul

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  install.sh  pyproject.toml  uninstall.sh
config/claude/: CLAUDE.md
config/codex/: AGENTS.md
config/cursor/: emrakul.mdc
config/hooks/: block-task-tool.sh
docs/: LLM_INSTRUCTIONS.md
emrakul/: __init__.py  cli.py  mcp_server.py  swarm.py  workers.py
prompts/: codex.md  cursor.md  gemini.md  kimi.md  opencode.md
